--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,14 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080/",
   "dependencies": {
+    "@okta/okta-react": "0.0.11",
+    "@okta/okta-signin-widget": "^2.5.0",
     "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
   },
   "scripts": {
